fix generics and remove deprecation.